--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Derrick Yam <keatkeat87@live.com>",
   "license": "MIT",
   "devDependencies": {
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.4.3",
     "webpack": "^5.58.0",
     "webpack-cli": "^4.9.0"
   }
