--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webpack-5-learning",
   "scripts": {
-    "start": "webpack --config webpack.config.js --node-env production"
+    "start": "webpack --config webpack.config.js --node-env production & gulp inlineCss"
   },
   "version": "1.0.0",
   "main": "index.js",
@@ -22,6 +22,8 @@
     "eslint-plugin-promise": "^5.1.0",
     "eslint-webpack-plugin": "^3.0.1",
     "glob": "^7.2.0",
+    "gulp": "^4.0.2",
+    "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.4.2",
     "postcss": "^8.3.9",
     "postcss-font-magician": "^3.0.0",
