--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "webpack-5-learning",
   "scripts": {
-    "start": "webpack --config webpack.config.js --node-env production & gulp inlineCss"
+    "start": "webpack serve --config webpack.dev.js --node-env development",
+    "build": "webpack --config webpack.prod.js --node-env production & gulp inlineCss"
   },
   "version": "1.0.0",
   "main": "index.js",
@@ -13,6 +14,7 @@
     "@typescript-eslint/parser": "^4.33.0",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.3.0",
+    "css-minimizer-webpack-plugin": "^3.1.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
@@ -23,6 +25,7 @@
     "eslint-webpack-plugin": "^3.0.1",
     "glob": "^7.2.0",
     "gulp": "^4.0.2",
+    "gulp-inline-css": "^4.0.0",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.4.2",
     "postcss": "^8.3.9",
@@ -45,6 +48,9 @@
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.3",
     "webpack": "^5.58.0",
-    "webpack-cli": "^4.9.0"
-  }
+    "webpack-cli": "^4.9.0",
+    "webpack-dev-server": "^4.3.1",
+    "webpack-merge": "^5.8.0"
+  },
+  "dependencies": {}
 }
